--- a/marvel-react/package.json
+++ b/marvel-react/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.17.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
